--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main>
       <section>
         <div class="bg-card">
-          <img src="images/bg-pattern-card.svg" alt="">
+          <img src="images/bg-pattern-card.svg" alt="card background image">
         </div>
         <div class="img-victor">
           <img src="images/image-victor.jpg" alt="image of victor">
