--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
   <main>
+    
       <section>
         <div class="bg-card">
-          <img src="images/bg-pattern-card.svg" alt="card background image">
+          <img src="images/bg-pattern-card.svg" alt="">
         </div>
         <div class="img-victor">
           <img src="images/image-victor.jpg" alt="image of victor">
@@ -28,6 +29,7 @@
         <div>
         </div>
       </section>
+      
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
